--- a/app/composer.json
+++ b/app/composer.json
@@ -6,7 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "auth0/login": "^7.15",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.3",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
